fixes bug 113508 "Identical URIs do not compare via nsIURI::Equals" r=andreas.otte@debitel.net, sr=rpotts@netscape.com